--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Jade McGough - @sailoremo
-url:              http://zetsubo.github.io
+url:              http://jademcgough.github.io
 permalink:        pretty
 pygments:         true
 markdown:         rdiscount
